--- a/productmanager/src/main/resources/application.properties
+++ b/productmanager/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.jpa.hibernate.ddl-auto = none
+spring.datasource.url = jdbc://localhost:3306/productmanager
+spring.datasource.username = root
+spring.datasource.password = password
